# Job-Tracker

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.serena/: project.yml
backend/: __init__.py  config.py  main.py  models.py
backend/cli/: commands.py
backend/extraction/: __init__.py  extractor.py
backend/scheduler/: __init__.py  reminders.py
backend/storage/: __init__.py  qdrant_client.py
extension/: background.js  content.js  dashboard.html  dashboard.js  manifest.json  panel.html  panel.js  popup.html  popup.js
